--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
         const typingIndicator = document.getElementById('typingIndicator');
         let thinkMode = false;
         let ws = null;
-        const WEBSOCKET_URL = 'wss://your-backend-domain.com/ws'; // Replace with your backend WebSocket URL
+        const WEBSOCKET_URL = 'https://37d4d06c2eca.ngrok-free.app; // Replace with your backend WebSocket URL
 
         function initializeWebSocket() {
             ws = new WebSocket(WEBSOCKET_URL);
