--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IE-Bot Chat</title>
+    <title>NAVI-AI</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/4.0.12/marked.min.js"></script>
     <style>
         * {
             margin: 0;
             padding: 0;
-            box-sizing: border-box;
+            box-sizing: flex;
         }
 
         body {
@@ -305,12 +305,12 @@
         <div class="messages-container" id="messagesContainer">
             <div class="welcome-message">
                 <h2>Добро пожаловать!</h2>
-                <p>Начните общение с IE-Bot</p>
+                <p>Начните общение с NAVI-AI</p>
             </div>
         </div>
 
         <div class="typing-indicator" id="typingIndicator">
-            IE-Bot печатает<span class="typing-dots"></span>
+            NAVI-AI печатает<span class="typing-dots"></span>
         </div>
 
         <div class="input-container">
@@ -327,7 +327,7 @@
             <textarea 
                 class="message-input" 
                 id="messageInput" 
-                placeholder="Напишите сообщение..."
+                placeholder="..."
                 rows="1"
                 maxlength="4000"
             ></textarea>
