--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
         const typingIndicator = document.getElementById('typingIndicator');
         let thinkMode = false;
         let ws = null;
-        const WEBSOCKET_URL = "wsss://37d4d06c2eca.ngrok-free.app"; // Используем wss:// для WebSocketReplace with your backend WebSocket URL
+        const WEBSOCKET_URL = "wss://37d4d06c2eca.ngrok-free.app"; // Используем wss:// для WebSocketReplace with your backend WebSocket URL
 
         function initializeWebSocket() {
             ws = new WebSocket(WEBSOCKET_URL);
